deps/v8/test/message/fail/get-iterator-return-non-receiver.out
*%(basename)s:6: TypeError: Result of the Symbol.iterator method is not an object
var [a] = [1];
          ^
TypeError: Result of the Symbol.iterator method is not an object
    at *%(basename)s:6:11